Make the facility for recognizing BIOS-signatures more general and return a printable representation.

This fixes recognition of the PC Engines WRAP and improves the
recognition of the Soekris boards (Bios version can now be
seen in the dmesg output for instance).

Also, add watchdog support for PCM-582x platforms.

Submitted by:	Adrian Steinmann <ast@marabu.ch>
Slightly changed by:	phk
PR:	81360


git-svn-id: svn+ssh://svn.freebsd.org/base/head@148231 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f