sys/i386/i386/bios.c
@@ -475,19 +475,81 @@ bios16(struct bios_args *args, char *fmt, ...)
     return (i);
 }
 
-const u_char *
-bios_string(u_int from, u_int to, const u_char *string, int len)
+int bios_oem_strings(struct bios_oem *oem, u_char *buffer, size_t maxlen)
 {
-	const char *t, *te;
+	size_t idx = 0;
+	struct bios_oem_signature *sig;
+	u_int from, to;
+	u_char c, *s, *se, *str, *bios_str;
+	size_t i, off, len, tot;
 
-	if (len == 0)
-		len = strlen(string);
-	t = (const char *)(KERNBASE + from);
-	te = (const char *)(KERNBASE + to);
-	for (; t <= te; t++)
-		if (!memcmp(string, t, len))
-			return (t);
-	return (NULL);
+	if ( !oem || !buffer || maxlen<2 )
+		return(-1);
+
+	sig = oem->signature;
+	if (!sig)
+		return(-2);
+
+	from = oem->range.from;
+	to = oem->range.to;
+	if ( (to<=from) || (from<BIOS_START) || (to>(BIOS_START+BIOS_SIZE)) )
+		return(-3);
+
+	while (sig->anchor != NULL) {
+		str = sig->anchor;
+		len = strlen(str);
+		off = sig->offset;
+		tot = sig->totlen;
+		/* make sure offset doesn't go beyond bios area */
+		if ( (to+off)>(BIOS_START+BIOS_SIZE) ||
+					((from+off)<BIOS_START) ) {
+			printf("sys/i386/i386/bios.c: sig '%s' "
+				"from 0x%0x to 0x%0x offset %d "
+				"out of BIOS bounds 0x%0x - 0x%0x\n",
+				str, from, to, off,
+				BIOS_START, BIOS_START+BIOS_SIZE);
+			return(-4);
+		}
+		/* make sure we don't overrun return buffer */
+		if (idx + tot > maxlen - 1) {
+			printf("sys/i386/i386/bios.c: sig '%s' "
+				"idx %d + tot %d = %d > maxlen-1 %d\n",
+				str, idx, tot, idx+tot, maxlen-1);
+			return(-5);
+		}
+		bios_str = NULL;
+		s = (u_char *)BIOS_PADDRTOVADDR(from);
+		se = (u_char *)BIOS_PADDRTOVADDR(to-len);
+		for (; s<se; s++) {
+			if (!memcmp(str, s, len)) {
+				bios_str = s;
+				break;
+			}
+		}
+		/*
+		*  store pretty version of totlen bytes of bios string with
+		*  given offset; 0x20 - 0x7E are printable; uniquify spaces
+		*/
+		if (bios_str) {
+			for (i=0; i<tot; i++) {
+				c = bios_str[i+off];
+				if ( (c < 0x20) || (c > 0x7E) )
+					c = ' ';
+				if (idx == 0) {
+					if (c != ' ')
+						buffer[idx++] = c;
+				} else if ( (c != ' ') ||
+					((c == ' ') && (buffer[idx-1] != ' ')) )
+						buffer[idx++] = c;
+			}
+		}
+		sig++;
+	}
+	/* remove a final trailing space */
+	if ( (idx > 1) && (buffer[idx-1] == ' ') )
+		idx--;
+	buffer[idx] = '\0';
+	return (idx);
 }
 
 #ifdef DEV_ISA
